@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

'skinparam linetype ortho
skinparam groupInheritance 2

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

class Branch {
}


class Employee {
    'name
    'email
    'position
    'phone
}


'class User {
'    name
'    email
'    password
'}

/'class Agent {

}

class Property {

}

class House {

}

class Apartment {

}

class Land {

}

class Client {

}

class Announcement {

}

class "Unregistered User" {

}'/


'House --|> Property
'Apartment --|> Property
'Land --|> Property


Property <|-- House
Property <|-- Apartment
Property <|-- Land


Announcement "1" -- "1" Property: includes >

Branch -- Announcement: publishes >

Agent "*" - "1" Branch: assigned to >
Agent --|> Employee
'Employee -|> User
Agent "1" -- "*" Announcement: validates >
'Client "0..1" - "*" Property: owns >
Property "*" -- "1" Client : owns <
'Client "*" -|> "1" User
Client "1" -- "*" Announcement: creates >
'"Unregistered User" "1" ---|> "1" User
"Unregistered User" "1" -- "*" Announcement: browses >



@enduml